crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_component_resolution_is_scoped_per_branch.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
expression: code.as_str()
---
import { resolveComponent as _resolveComponent, createComponentWithFallback as _createComponentWithFallback, setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<div></div>", true)
export function render(_ctx) {
const n8 = t0()
_setInsertionState(n8, null, 0)
const n0 = _createIf(() => (_ctx.first), () => {
_setInsertionState(n8, null, 0)
const _component_CodeHighlight = _resolveComponent("CodeHighlight")
const n2 = _createComponentWithFallback(_component_CodeHighlight, null, null, true)
return n2
}, () => {
_setInsertionState(n8, null, 0)
return _createIf(() => (_ctx.second), () => {
_setInsertionState(n8, null, 0)
const _component_CodeHighlight = _resolveComponent("CodeHighlight")
const n4 = _createComponentWithFallback(_component_CodeHighlight, null, null, true)
return n4
}, () => {
_setInsertionState(n8, null, 0)
const _component_CodeHighlight = _resolveComponent("CodeHighlight")
const n7 = _createComponentWithFallback(_component_CodeHighlight, null, null, true)
return n7
})
})
return n8
}
