crates/vize_atelier_vapor/src/snapshots/vize_atelier_vapor__tests__compile_nested_control_flow_avoids_unused_root_insertion_state.snap
---
source: crates/vize_atelier_vapor/src/tests.rs
assertion_line: 401
expression: code.as_str()
---
import { setInsertionState as _setInsertionState, createIf as _createIf, template as _template } from 'vue';
const t0 = _template("<span>a</span>")
const t1 = _template("<i>b</i>")
const t2 = _template("<section></section>", true)
const t3 = _template("<div></div>", true)
export function render(_ctx) {
const n9 = t3()
_setInsertionState(n9)
const n0 = _createIf(() => (_ctx.ok), () => {
const n8 = t2()
_setInsertionState(n8)
const n2 = _createIf(() => (_ctx.inner), () => {
const n4 = t0()
return n4
})
_setInsertionState(n8)
const n5 = _createIf(() => (_ctx.more), () => {
const n7 = t1()
return n7
})
return n8
})
return n9
}
